# redlib-mcp

./: CLAUDE.md  flake.nix  pyproject.toml
docs/plans/: 2026-01-18-cloudflare-access-oauth-design.md  2026-01-18-cloudflare-access-oauth-implementation.md  2026-01-18-redlib-mcp-design.md  2026-01-18-redlib-mcp-implementation.md
src/: redlib_mcp.py
tests/: test_client.py  test_config.py  test_integration.py  test_normalize.py  test_oauth.py  test_tools.py
